--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
 
       <section id="main_content">
         <h3>
-<a id="Szene" class="anchor" href="#Szene" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="Szene" class="anchor" href="#Szene" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Szene</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Nachbau des Gerichtssaals und der Figuren in 3D.
+User befindet sich in der Mitte des Raumes.
+Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. 
+Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht 
+Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. 
+Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.
+</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
