--- a/index.html
+++ b/index.html
@@ -1,63 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
+<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
+<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
+  <link rel="stylesheet" href="stylesheets/github-dark.css">
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="javascripts/script.js"></script>
 
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
-    <title>Sezuangericht by pskiersk</title>
-  </head>
+  <title>Sezuangericht</title>
+  <meta name="description" content="">
 
-  <body>
-    <a id="forkme_banner" href="https://github.com/pskiersk/SezuanGericht">View on GitHub</a>
-    <div class="shell">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Sezuangericht</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-      </header>
+</head>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
-      </section>
+<body>
 
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h3>
+  <div class="wrapper">
+    <header>
+      <h1 class="title">Sezuangericht</h1>
+    </header>
+    <div id="container">
+      <p class="tagline"></p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/pskiersk/SezuanGericht" class="code">View Sezuangericht on GitHub</a>
+        </div>
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h3>
 <a id="szenenbeschreibung" class="anchor" href="#szenenbeschreibung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Szenenbeschreibung</h3>
 
-<p>Nachbau des Gerichtssaals und der Figuren in 3D.
-User befindet sich in der Mitte des Raumes.
-Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p>
+<p>Nachbau des Gerichtssaals und der Figuren in 3D.</p>
 
-<h1>
-<a id="anschließend-verschwinden-die-zeugen-shui-ta-wird-durch-shin-te-ausgetauscht" class="anchor" href="#anschlie%C3%9Fend-verschwinden-die-zeugen-shui-ta-wird-durch-shin-te-ausgetauscht" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht</h1>
+<p>User befindet sich in der Mitte des Raumes.</p>
 
-<h1>
-<a id="ihre-aussage-wird-abgespielt-die-zeugen-tauchen-wieder-auf-die-götter-fliegen-auf-einer-wolke-davon" class="anchor" href="#ihre-aussage-wird-abgespielt-die-zeugen-tauchen-wieder-auf-die-g%C3%B6tter-fliegen-auf-einer-wolke-davon" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon.</h1>
+<p>Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p>
+
+<p>Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht </p>
+
+<p>Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. </p>
 
 <p>Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.</p>
 
@@ -80,22 +70,26 @@ Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmt
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/pskiersk">pskiersk</a> can be found on <a href="https://github.com/pskiersk/SezuanGericht">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
+        </article>
+      </div>
     </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/pskiersk" class="avatar"><img src="https://avatars2.githubusercontent.com/u/24435079?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/pskiersk">pskiersk</a> maintains <a href="https://github.com/pskiersk/SezuanGericht">Sezuangericht</a></p>
 
-    
-  </body>
+
+      </div>
+      <div class="creds">
+        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
+      </div>
+    </footer>
+  </div>
+  <div class="current-section">
+    <a href="#top">Scroll to top</a>
+    <a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="tar">tar</a><a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <p class="name"></p>
+  </div>
+
+  
+</body>
 </html>
