--- a/index.html
+++ b/index.html
@@ -1,95 +1,119 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
 
-  <title>Sezuangericht</title>
-  <meta name="description" content="">
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Sezuangericht by pskiersk</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
+    <a id="forkme_banner" href="https://github.com/pskiersk/SezuanGericht">View on GitHub</a>
+    <div class="shell">
 
-</head>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Sezuangericht</h1>
+            <h2></h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-<body>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Sezuangericht</h1>
-    </header>
-    <div id="container">
-      <p class="tagline"></p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/pskiersk/SezuanGericht" class="code">View Sezuangericht on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h3>
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <h3>
 <a id="szenenbeschreibung" class="anchor" href="#szenenbeschreibung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Szenenbeschreibung</h3>
 
-<p>Nachbau des Gerichtssaals und der Figuren in 3D.</p>
+<p>-Nachbau des Gerichtssaals und der Figuren in 3D.</p>
 
-<p>User befindet sich in der Mitte des Raumes.</p>
+<p>-User befindet sich in der Mitte des Raumes.</p>
 
-<p>Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p>
+<p>-Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p>
 
-<p>Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht </p>
+<p>-Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht </p>
 
-<p>Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. </p>
+<p>-Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. </p>
 
-<p>Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>-Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="herausforderungen" class="anchor" href="#herausforderungen" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Herausforderungen</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>-Wie aufwendig sollen die Objekte modelliert werden? (Ladezeiten, Rechenleistung)</p>
+
+<p>-Komplett abstrakte Szenerie?</p>
+
+<p>-Steuerung der Reihenfolge der Sprachausgaben. </p>
+
+<p>-Unterscheidung der Personen. (Personengruppen - gleiche Farbe) </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="aufgabenverteilung" class="anchor" href="#aufgabenverteilung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Aufgabenverteilung</h3>
 
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>-3D Modellierung (Szenerie: Gerichtssaal, Figuren) </p>
+
+<p>-Sound (Schneiden der Tonaufnahmen) </p>
+
+<p>-Animation (Wolke mit Göttern fährt hoch, Figuren verschwinden) </p>
+
+<p>-Programmierung der Interaktion (User) und Bild/Blick/Schnitt (Blick - Ton) </p>
+
+<p>-Regie </p>
+
+<h3>
+<a id="fortschritteziele-bis-zur-nächsten-sitzung" class="anchor" href="#fortschritteziele-bis-zur-n%C3%A4chsten-sitzung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fortschritte/Ziele bis zur nächsten Sitzung</h3>
+
+<p>-Konkretisierung der Aufgaben </p>
+
+<p>-Erstellung einer Roadmap</p>
+
+<p>-Entscheidung der Vorgehensweise für die Herausforderungen</p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-        </article>
-      </div>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/pskiersk">pskiersk</a> can be found on <a href="https://github.com/pskiersk/SezuanGericht">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="https://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/pskiersk" class="avatar"><img src="https://avatars2.githubusercontent.com/u/24435079?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/pskiersk">pskiersk</a> maintains <a href="https://github.com/pskiersk/SezuanGericht">Sezuangericht</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/pskiersk/SezuanGericht/tarball/master" class="tar">tar</a><a href="https://github.com/pskiersk/SezuanGericht/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
