Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -75,15 +75,13 @@
 <h3>
 <a id="aufgabenverteilung" class="anchor" href="#aufgabenverteilung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Aufgabenverteilung</h3>
 
-<p>-3D Modellierung (Szenerie: Gerichtssaal, Figuren) </p>
-
-<p>-Sound (Schneiden der Tonaufnahmen) </p>
-
-<p>-Animation (Wolke mit Göttern fährt hoch, Figuren verschwinden) </p>
-
-<p>-Programmierung der Interaktion (User) und Bild/Blick/Schnitt (Blick - Ton) </p>
-
-<p>-Regie </p>
+<ul>
+<li><p>Sara: 3D Modellierung (Szenerie: Gerichtssaal, Figuren) </p></li>
+<li><p>Philip: Sound (Schneiden der Tonaufnahmen) </p></li>
+<li><p>Alle: Animation (Wolke mit Göttern fährt hoch, Figuren verschwinden) </p></li>
+<li><p>Valentina und Yannick: Programmierung der Interaktion (User) und Bild/Blick/Schnitt (Blick - Ton) </p></li>
+<li><p>Alle: Regie </p></li>
+</ul>
 
 <h3>
 <a id="fortschritteziele-bis-zur-nächsten-sitzung" class="anchor" href="#fortschritteziele-bis-zur-n%C3%A4chsten-sitzung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fortschritte/Ziele bis zur nächsten Sitzung</h3>
