Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -49,28 +49,24 @@
         <h3>
 <a id="szenenbeschreibung" class="anchor" href="#szenenbeschreibung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Szenenbeschreibung</h3>
 
-<p>-Nachbau des Gerichtssaals und der Figuren in 3D.</p>
-
-<p>-User befindet sich in der Mitte des Raumes.</p>
-
-<p>-Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p>
-
-<p>-Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht </p>
-
-<p>-Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. </p>
-
-<p>-Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.</p>
+<ul>
+<li><p>Nachbau des Gerichtssaals und der Figuren in 3D.</p></li>
+<li><p>User befindet sich in der Mitte des Raumes.</p></li>
+<li><p>Richtet der User seinen Blick (Cursor) auf die jeweiligen Figuren wird der Filmton mit deren Aussage abgespielt. </p></li>
+<li><p>Anschließend verschwinden die Zeugen, Shui Ta wird durch Shin Te ausgetauscht </p></li>
+<li><p>Ihre Aussage wird abgespielt. Die Zeugen tauchen wieder auf. Die Götter fliegen auf einer Wolke davon. </p></li>
+<li><p>Alle Zeugen verschwinden. Nur Shin Te bleibt übrig und der Epilog wird vorgespielt.</p></li>
+</ul>
 
 <h3>
 <a id="herausforderungen" class="anchor" href="#herausforderungen" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Herausforderungen</h3>
 
-<p>-Wie aufwendig sollen die Objekte modelliert werden? (Ladezeiten, Rechenleistung)</p>
-
-<p>-Komplett abstrakte Szenerie?</p>
-
-<p>-Steuerung der Reihenfolge der Sprachausgaben. </p>
-
-<p>-Unterscheidung der Personen. (Personengruppen - gleiche Farbe) </p>
+<ul>
+<li><p>Wie aufwendig sollen die Objekte modelliert werden? (Ladezeiten, Rechenleistung)</p></li>
+<li><p>Komplett abstrakte Szenerie?</p></li>
+<li><p>Steuerung der Reihenfolge der Sprachausgaben. </p></li>
+<li><p>Unterscheidung der Personen. (Personengruppen - gleiche Farbe) </p></li>
+</ul>
 
 <h3>
 <a id="aufgabenverteilung" class="anchor" href="#aufgabenverteilung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Aufgabenverteilung</h3>
@@ -86,11 +82,20 @@
 <h3>
 <a id="fortschritteziele-bis-zur-nächsten-sitzung" class="anchor" href="#fortschritteziele-bis-zur-n%C3%A4chsten-sitzung" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fortschritte/Ziele bis zur nächsten Sitzung</h3>
 
-<p>-Konkretisierung der Aufgaben </p>
+<ul>
+<li><p>Konkretisierung der Aufgaben </p></li>
+<li><p>Erstellung einer Roadmap</p></li>
+<li><p>Entscheidung der Vorgehensweise für die Herausforderungen</p></li>
+</ul>
 
-<p>-Erstellung einer Roadmap</p>
+<h3>
+<a id="pläne-für-den-sprint" class="anchor" href="#pl%C3%A4ne-f%C3%BCr-den-sprint" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Pläne für den Sprint</h3>
 
-<p>-Entscheidung der Vorgehensweise für die Herausforderungen</p>
+<ul>
+<li><p>Sound: fertig Schneiden</p></li>
+<li><p>3d: Grundlage der Szene erstellen, sodass der Programmier und Sound in eine Rohfassung eingebunden werden kann</p></li>
+<li><p>Programmierung: Grundlegende Funktionen lernen (triggern von Animationen, Blickkontakt des Users als Event nutzen)</p></li>
+</ul>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
